// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`App render renders the main nav and block table 1`] = `
<Fragment>
  <MainNav
    loadingBlocks={false}
    onRequestBlocks={[Function]}
  />
  <BlockTable
    blocks={Array []}
    loadingBlocks={false}
  />
</Fragment>
`;

exports[`App render while blocks are loading passes the loadingBlocks state to the MainNav and BlockTable 1`] = `
<Fragment>
  <MainNav
    loadingBlocks={true}
    onRequestBlocks={[Function]}
  />
  <BlockTable
    blocks={Array []}
    loadingBlocks={true}
  />
</Fragment>
`;
